# Docy_Search_GitHub

./: .gitignore  PROJECT_INDEX.md  README.md  activity_tracker.py  app.py  brave_search.py  code_to_integrate.py  config-setting.py  demo_github_live.py  demo_live_activity.py  final_ui_test.py  github_mcp_server.py  github_usage_guide.py  import_test.txt  live_solution_summary.py  main_ui.py  mcp_test_results.txt  project_context.md  pyproject.toml  python_tools.py  reorganize_project.py  repo_break_down.txt  requirements.txt  simple_test.py  streamlit_guide.md  test_async_memory.py  test_dashboard.html  test_dashboard_workflow.py  test_mcp_imports.py  test_modular.py  test_output.txt  test_step3_integration.py  test_step5_complete.py  test_tab_integration.py  test_ui_system.py  update_imports.py  verify_system.py
.md/: README.md  current-status.md  implementation-roadmap.md  mcp-perplexity-websearch.md  optimization-checklist.md  project-summary.md  repository-analysis.md
Docs/: 01-overview.md  02-installation.md  03-api-reference.md  04-components.md  05-configuration.md  06-database.md  Future_Enhancements_Roadmap.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_NEW.md  README.md  Tool_Recommendation_Guide.md  project_context_example.md
config/: __init__.py
demos/: demo_tool_recommendation.py
docy_search/: __init__.py  app.py  brave_search.py  github_mcp_server.py  main_ui.py  python_tools.py
memory/: README.md  __init__.py  cost_tracker.py  memory_manager.py  memory_manager_optimized.py  sqlite_memory.py
scripts/: database_explorer.py  db_quick.py  view_chats.py
(+46 files in other folders)
