[project]
name = "docy-search-github"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.11",
    "aiosqlite>=0.21.0",
    "anthropic>=0.52.2",
    "google-generativeai>=0.8.5",
    "openai>=1.84.0",
    "pydantic-ai>=0.2.15",
    "streamlit>=1.45.1",
    "tiktoken>=0.9.0",
]
